--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -3,7 +3,7 @@
 .header {
 	width: 100%;
 	display: grid;
-	grid-template-areas: "alias-hot-link alias-hot-select-btn alias-new-link alias-top-link alias-top-select-btn alias-rising-link";
+	grid-template-areas: "alias-hot-link alias-hot-select-btn alias-new-link alias-top-link alias-top-select-btn alias-rising-link alias-checkbox-container";
 	justify-content: start;
 	gap: 0.5rem;
 	padding: 0.7rem;
@@ -113,107 +113,26 @@
 		@include headerOption;
 	}
 
-	// &__view-options-btn {
-	// 	position: relative;
-	// 	@include headerOption;
-	// 	margin-left: auto;
-	// 	border: none;
-	// 	background-color: $clr-very-dark-grey;
+	&__checkbox-container {
+		grid-area: alias-checkbox-container;
+		@include flexCenter;
+		gap: 0.5rem;
+		padding: 0.5rem;
 
-	// 	& #card-icon {
-	// 		@include viewIconStyle;
-	// 		grid-template-rows: 1fr 2px 1fr;
-	// 		pointer-events: none;
-	// 	}
+		&__text {
+			font-weight: 700;
+			font-size: 1rem;
+			color: $clr-grey;
+		}
 
-	// 	& #classic-icon {
-	// 		@include viewIconStyle;
-	// 		grid-template-rows: 1fr 2px 1fr 2px 1fr;
-	// 		pointer-events: none;
+		&__checkbox {
+			accent-color: $clr-grey;
 
-	// 		&::after {
-	// 			grid-row: 4/5;
-	// 			content: "";
-	// 			width: 100%;
-	// 			height: 100%;
-	// 			background: $clr-grey;
-	// 		}
-	// 	}
-
-	// 	&__container {
-	// 		position: absolute;
-	// 		top: 2.5rem;
-	// 		left: 0;
-	// 		display: flex;
-	// 		flex-direction: column;
-	// 		align-items: flex-start;
-	// 		border-radius: 5px;
-	// 		border: 1px solid lighten($clr-dark-grey, 10%);
-	// 		background-color: $clr-very-dark-grey;
-	// 		font-weight: fontWeight(normal);
-
-	// 		&__option {
-	// 			width: 100%;
-	// 			display: flex;
-	// 			gap: 0.5rem;
-	// 			padding: 0.4rem;
-
-	// 			&.active {
-	// 				color: $clr-whitish;
-
-	// 				& #card-icon {
-	// 					border: 2px solid $clr-whitish;
-
-	// 					&::before {
-	// 						background: $clr-whitish;
-	// 					}
-	// 				}
-
-	// 				& #classic-icon {
-	// 					border: 2px solid $clr-whitish;
-
-	// 					&::before {
-	// 						background: $clr-whitish;
-	// 					}
-
-	// 					&::after {
-	// 						background: $clr-whitish;
-	// 					}
-	// 				}
-	// 			}
-
-	// 			&:not(.active):hover {
-	// 				cursor: pointer;
-	// 				background-color: $clr-dark-blue;
-	// 				color: $clr-whitish;
-
-	// 				& #card-icon {
-	// 					border: 2px solid $clr-whitish;
-
-	// 					&::before {
-	// 						background: $clr-whitish;
-	// 					}
-	// 				}
-
-	// 				& #classic-icon {
-	// 					border: 2px solid $clr-whitish;
-
-	// 					&::before {
-	// 						background: $clr-whitish;
-	// 					}
-
-	// 					&::after {
-	// 						background: $clr-whitish;
-	// 					}
-	// 				}
-	// 			}
-	// 		}
-	// 	}
-
-	// 	&:hover {
-	// 		cursor: pointer;
-	// 	}
-	// }
+			&:hover {
+				cursor: pointer;
+			}
+		}
+	}
 
 	& i {
 		pointer-events: none;
