--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -13,7 +13,8 @@
 	background-color: $clr-very-dark-grey;
 	z-index: 10000;
 
-	&__home-container {
+	&__home-container-link {
+		text-decoration: none;
 		left: 1rem;
 		@include flexCenter;
 		gap: 0.2rem;
