--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -122,6 +122,18 @@
 					}
 				}
 
+				&__img-counter-container {
+					position: absolute;
+					top: 1.5rem;
+					right: 1rem;
+					padding: 0.1rem 0.5rem;
+					background-color: $clr-grey;
+					opacity: 0.7;
+					border-radius: 25px;
+					font-size: 0.8rem;
+					color: $clr-black;
+				}
+
 				&__prev-button {
 					@include arrowButtonStyle;
 					left: 0.3rem;
@@ -141,9 +153,10 @@
 				}
 			}
 
-			& .twitter-tweet {
-				margin: 0 auto;
-			}
+			// disabled until twitter component is back on
+			// & .twitter-tweet {
+			// 	margin: 0 auto;
+			// }
 
 			&__post-video {
 				max-width: 100%;
@@ -156,10 +169,11 @@
 				}
 			}
 
-			&__youtube-video {
-				margin-top: 1rem;
-				height: 300px;
-			}
+			// disabled until youtube component is back on
+			// &__youtube-video {
+			// 	margin-top: 1rem;
+			// 	height: 300px;
+			// }
 		}
 	}
 }
